Sida för borden och sida för ordrar
Skapat en sida där man kan se de 7 borden. Det finns en knapp för varje bord, dock fungerar endast knappen för bord 1.
På sidan för ordrar finns det en scrollbarlista som fylls med hjälp av en list-adapter i listan kan det finnas normala och special ordrar. Dessutom finns det 2 knappar längst ner på skärmen för att lägga till rätter och en för att rensa ett bord, ingen av dessa fungerar.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".TablesActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,12 +17,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".TablesActivity"
+            android:name=".OrdersActivity"
             android:label="@string/title_activity_tables"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".TablesActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="se.miun.antonsskafferi.MainActivity" />
+                android:value="se.miun.antonsskafferi.TablesActivity" />
         </activity>
     </application>
 
