--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="se.miun.antonsskafferi.TablesActivity" />
         </activity>
+        <activity
+            android:name=".CoursesActivity"
+            android:label="@string/title_activity_tables"
+            android:parentActivityName=".OrdersActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="se.miun.antonsskafferi.OrdersActivity" />
+        </activity>
     </application>
 
 </manifest>
