Inledde arbetet på KitchenActivity
Började med KitchenActivity, alltså vad Anders kommer att se i köket. Det är just nu endast en ListView med en custom adapter som ger tillbaks en View med lite stuff i.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="se.miun.antonsskafferi.MainActivity" />
         </activity>
+        <activity android:name=".KitchenActivity"></activity>
     </application>
 
 </manifest>
