--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -3,7 +3,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>miun.erfa1501</groupId>
+    <groupId>se.miun.antonsskafferi</groupId>
     <artifactId>Glassboi</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
