Adding a "login" button.
A new knapp.php file has been created. It will be used to accsess
the admin page once done.

--- a/web/nbproject/project.properties
+++ b/web/nbproject/project.properties
@@ -6,5 +6,5 @@ file.reference.web-public_html=public_html
 file.reference.web-test=test
 files.encoding=UTF-8
 site.root.folder=${file.reference.web-public_html}
-start.file=index.html
+start.file=html/knapp.php
 web.context.root=/web
