Inventerings sida med oidentifierat fel.
Vi har gjort en ingrediens klass och en inventerings aktivitet med en adapter dock så crashar appen när vi försöker gå till den sidan. Just nu är inventerings sidan bunden till button 3 på startsidan.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,13 +32,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="se.miun.antonsskafferi.OrdersActivity" />
         </activity>
-        <activity android:name=".KitchenActivity"
+        <activity
+            android:name=".KitchenActivity"
             android:label="Kök"
-            android:parentActivityName=".OrdersActivity" >
+            android:parentActivityName=".OrdersActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="se.miun.antonsskafferi.OrdersActivity" />
         </activity>
+        <activity android:name=".InventoryActivity"></activity>
     </application>
 
 </manifest>
