Inventerings sida med fixat fel.
Vi har gjort en ingrediens klass och en inventerings aktivitet med en adapter. Just nu är inventerings sidan bunden till button 3 på startsidan. FIxade crashen från förra commiten

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="se.miun.antonsskafferi.OrdersActivity" />
         </activity>
-        <activity android:name=".InventoryActivity"></activity>
+        <activity
+            android:name=".InventoryActivity"
+            android:label="Inventering"
+            android:parentActivityName=".TablesActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="se.miun.antonsskafferi.TablesActivity" />
+
+        </activity>
     </application>
 
 </manifest>
