--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -89,6 +89,13 @@
             <version>2.9.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4</version>
+        </dependency>
+
 
     </dependencies>
     <properties>
