Lagt till en logg in sida.
Lagt till en login sida samt fixat med inläsningen från backend.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -12,12 +14,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">
 
-        <activity android:name=".TablesActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".TablesActivity"
+        android:parentActivityName=".loginActivity">
+        <intent-filter>
+            <action
+                android:name ="android.intent.action.MAIN"/>
+            <category
+                android:name ="android.intent.category.LAUNCHER"/>
+        </intent-filter>>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".OrdersActivity"
@@ -50,6 +55,11 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="se.miun.antonsskafferi.TablesActivity" />
+
+        </activity>
+        <activity
+            android:name=".loginActivity"
+            android:label="Logga In" >
 
         </activity>
     </application>
