--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">
 
         <activity android:name=".TablesActivity"
-        android:parentActivityName=".loginActivity">
+        android:parentActivityName=".LoginActivity">
         <intent-filter>
             <action
                 android:name ="android.intent.action.MAIN"/>
@@ -58,7 +58,7 @@
 
         </activity>
         <activity
-            android:name=".loginActivity"
+            android:name=".LoginActivity"
             android:label="Logga In" >
 
         </activity>
