--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,25 +3,23 @@
     package="se.miun.antonsskafferi">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
 
     <application
-
-
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">
-
         <activity android:name=".TablesActivity">
-        <intent-filter>
-            <action
-                android:name ="android.intent.action.MAIN"/>
-            <category
-                android:name ="android.intent.category.LAUNCHER"/>
-        </intent-filter>>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            >
         </activity>
         <activity
             android:name=".OrdersActivity"
@@ -54,11 +52,18 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="se.miun.antonsskafferi.TablesActivity" />
-
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:label="Logga In" >
+            android:label="Logga In"></activity>
+
+        <activity
+            android:name=".ScheduleActivity"
+            android:label="Schema">
+            <intent-filter>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
 
         </activity>
     </application>
