added update and delete for foodorder

--- a/backend/src/main/webapp/WEB-INF/web.xml
+++ b/backend/src/main/webapp/WEB-INF/web.xml
@@ -33,7 +33,7 @@
         </init-param>
         <init-param>
             <param-name>cors.supportedMethods</param-name>
-            <param-value>GET, HEAD, POST, OPTIONS, DELETE</param-value>
+            <param-value>GET, HEAD, POST, OPTIONS, DELETE, PUT</param-value>
         </init-param>
         <init-param>
             <param-name>cors.supportedHeaders</param-name>
