Fixat Login Cache och Service.
Fixat Login så att det nu går att logga in med token från servern.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             <action
                 android:name="se.miun.antonsskafferi.TablesActivity"/>
             <category
-                android:name="android.intent.category.default"/>
+                android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
         <activity
