--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">
 
-        <activity
+        <activity android:name=".TablesActivity" >
+            <intent-filter>
+                <action
+                    android:name="android.intent.action.MAIN"/>
+                <category
+                    android:name ="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+        <!--<activity
             android:name=".LoginActivity"
             android:label="Logga In" >
         <intent-filter>
@@ -22,16 +30,8 @@
                 android:name ="android.intent.action.MAIN"/>
             <category
                 android:name ="android.intent.category.LAUNCHER"/>
-        </intent-filter>>
-        </activity>
-        <activity android:name=".TablesActivity" >
-            <intent-filter>
-            <action
-                android:name="se.miun.antonsskafferi.TablesActivity"/>
-            <category
-                android:name="android.intent.category.default"/>
-            </intent-filter>
-        </activity>
+        </intent-filter>
+        </activity> -->
         <activity
             android:name=".OrdersActivity"
             android:label="@string/title_activity_tables"
