--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,31 +5,27 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-
-
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">
-
         <activity
             android:name=".LoginActivity"
-            android:label="Logga In" >
-        <intent-filter>
-            <action
-                android:name ="android.intent.action.MAIN"/>
-            <category
-                android:name ="android.intent.category.LAUNCHER"/>
-        </intent-filter>>
-        </activity>
-        <activity android:name=".TablesActivity" >
+            android:label="Logga In">
             <intent-filter>
-            <action
-                android:name="se.miun.antonsskafferi.TablesActivity"/>
-            <category
-                android:name="android.intent.category.default"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            >
+        </activity>
+        <activity android:name=".TablesActivity">
+            <intent-filter>
+                <action android:name="se.miun.antonsskafferi.TablesActivity" />
+
+                <category android:name="android.intent.category.default" />
             </intent-filter>
         </activity>
         <activity
@@ -63,8 +59,8 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="se.miun.antonsskafferi.TablesActivity" />
-
         </activity>
+        <activity android:name=".EmployeeScheduleActivity"></activity>
     </application>
 
 </manifest>
