changed the structure of some files

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -121,7 +121,23 @@
             <artifactId>jjwt</artifactId>
             <version>0.6.0</version>
         </dependency>
+        <!--file-->
+        <!--<dependency>-->
+            <!--<groupId>com.sun.jersey</groupId>-->
+            <!--<artifactId>jersey-server</artifactId>-->
+            <!--<version>1.8</version>-->
+        <!--</dependency>-->
+
+        <!--<dependency>-->
+            <!--<groupId>com.sun.jersey.contribs</groupId>-->
+            <!--<artifactId>jersey-multipart</artifactId>-->
+            <!--<version>1.8</version>-->
+        <!--</dependency>-->
+
     </dependencies>
+
+
+
 
     <properties>
         <jersey.version>2.26</jersey.version>
