Börjat med registrering activity samt layout.
Börjat med registrerings activiteten samt även den tillhörande layouten. Finns ändast toaste atm.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,16 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">
 
-        <activity android:name=".TablesActivity" >
-            <intent-filter>
-                <action
-                    android:name="android.intent.action.MAIN"/>
-                <category
-                    android:name ="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
-      
-        <!--<activity
+        <activity
             android:name=".LoginActivity"
             android:label="Logga In" >
         <intent-filter>
@@ -32,8 +23,18 @@
             <category
                 android:name ="android.intent.category.LAUNCHER"/>
         </intent-filter>
-        </activity> -->
-      
+        </activity>
+
+        <activity android:name=".TablesActivity" >
+            <!--    <intent-filter>
+        <action
+                    android:name="android.intent.action.MAIN"/>
+                <category
+                    android:name ="android.intent.category.LAUNCHER"/>
+            </intent-filter> -->
+        </activity>
+
+
         <activity
             android:name=".OrdersActivity"
             android:label="@string/title_activity_tables"
@@ -66,6 +67,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="se.miun.antonsskafferi.TablesActivity" />
 
+        </activity>
+
+        <activity android:name=".RegisterActivity"
+            android:label="Registrering"
+            android:parentActivityName=".LoginActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value ="se.miun.antonsskafferi.LoginActivity"/>
         </activity>
     </application>
 
